# Linux-Virtual-Joystick-cpp

./: .autotools  .cproject  .project  AUTHORS  Makefile  Makefile.in  README  config.status  configure  configure.ac  configure.lineno  configure.scan  console.cpp  console.h  device.cpp  main.cpp  vjoy  vjoy.cpp  vjoy.h  vjoy_python.cpp  vjoy_python.h
joysticks/: arduino_serial_drive.py  example.py  filegamepad.py  n64.py  simple_joystick.py
src/: Makefile.am  Makefile.in  console.cpp  device.cpp  device.h  example.py  main.cpp  python_include.h  vjoy.cpp  vjoy.h  vjoy_python.cpp  vjoy_python.h
vjoy-cpp/: .cproject  .project  main.cpp  module.cpp  module.h  vjoy.cpp  vjoy.h  vjoy_python.cpp  vjoy_python.h
